--- a/README.text
+++ b/README.text
@@ -1,3 +1,3 @@
 # toDolist
 
-يتم تحديث الاكواد اول باول حيث  تم التحديث مرتين... انا اقوم برفع المشروع كامل وتحديثه بالكامل .. تحياتي
+يتم تحديث الاكواد اول باول حيث  تم التحديث 3 مرات... انا اقوم برفع المشروع كامل وتحديثه بالكامل .. تحياتي
